--- a/WebApp/wwwroot/css/main.css
+++ b/WebApp/wwwroot/css/main.css
@@ -1,128 +1,1 @@
-﻿@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-* {
-    font-family: "Inter", sans-serif;
-}
-
-header {
-    height: 70px;
-    width: 100vw;
-    padding: 0 30px;
-    background-color: var(--background-color2);
-    z-index: 100;
-    box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.wrapper {
-    min-height: 100vh;
-    position: relative;
-    height: auto
-}
-
-.nav {
-    min-height: 91vh;
-    width: 273px;
-    background-color: #1e272e;
-    position: absolute;
-    top: 0px;
-    left: 0;
-    box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
-    padding: 30px 0 20px 10px;
-    color: whitesmoke !important;
-}
-
-.navcontainer {
-    height: calc(100vh - 70px);
-    width: 600px;
-    position: relative;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    transition: all 0.5s ease-in-out;
-}
-
-    .navcontainer::-webkit-scrollbar {
-        display: none;
-    }
-
-.navclose {
-    width: 80px;
-}
-
-.nav-option {
-    width: 250px;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    padding: 0 30px 0 20px;
-    gap: 20px;
-    transition: all 0.1s ease-in-out;
-}
-
-    .nav-option:hover {
-        border-left: 5px solid #a2a2a2;
-        background-color: #dadada;
-        cursor: pointer;
-    }
-
-.nav-img {
-    height: 30px;
-}
-
-.nav-upper-options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-}
-
-.user-info {
-    display: flex;
-    align-items: center; 
-    justify-content: flex-start;
-    padding-top: 10px; 
-    margin-top: auto;
-    text-align: center; 
-}
-.inter-medium {
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    background: linear-gradient(-90deg, #052542 0%, #0D5EA8 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.list-unstyled li a {
-    text-decoration: none;
-    color: var(--text-color-gray);
-}
-    .list-unstyled li a:hover {
-        text-decoration: none;
-        color: black;
-    }
-    .list-unstyled li a.active {
-        color: black;
-    }
-.list-unstyled {
-    padding-left: 15px;
-}
-
-.content {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
-
-.footer {
-    text-align: center;
-    margin-top: auto;
-    padding: 10px;
-}
-
-.modal-footer {
-    background-color: var(--background-color5) !important;
-}
+﻿* { font-family: "Inter", sans-serif; }
