Modify default avatar

--- a/WebApp/Views/Job/_CreateJobModal.cshtml
+++ b/WebApp/Views/Job/_CreateJobModal.cshtml
@@ -74,7 +74,7 @@
                                         <!-- Location -->
                                         <div class="flex-1">
                                             <label asp-for="Location" class="block text-sm font-medium text-[#343131]">Location</label>
-                                            <input placeholder="Cebu City, Cebu" asp-for="Location" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobLocation" name="Location" />
+                                            <input placeholder="Cebu City, Cebu | Remote" asp-for="Location" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobLocation" name="Location" />
                                             <span asp-validation-for="Location" class="text-sm text-red-500"></span>
                                         </div>
                                     </div>
