Fix header styling for reset password modal

--- a/WebApp/Views/User/_ResetPasswordModal.cshtml
+++ b/WebApp/Views/User/_ResetPasswordModal.cshtml
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header border-0">
-                <h5 class="modal-title text-[#343131]" id="resetPasswordModalLabel">
+                <h5 class="modal-title flex items-center text-[#343131]" id="resetPasswordModalLabel">
                     @Html.Raw(Resources.Constants.SvgIcons.ModalDeleteIcon)
                     Confirm Reset Password
                 </h5>
