--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -90,6 +90,9 @@
                 button.disabled = true;
             });
         });
+        function featureUnavailable() {
+            toastr.error('Feature unavailable.');
+        }
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
