--- a/WebApp/Views/UserProfile/_PreferencesSection.cshtml
+++ b/WebApp/Views/UserProfile/_PreferencesSection.cshtml
@@ -24,7 +24,9 @@
             </button>
 
             <div id="notification-preferences-content" class="mt-1 hidden rounded-md border border-gray-200 bg-gray-50 p-4">
-                @await Html.PartialAsync("_NotificationPreferences", Model)
+                <div class="flex items-center justify-center">
+                    ----- Unavailable -----
+                </div>
             </div>
         </div>
 
@@ -38,7 +40,9 @@
             </button>
 
             <div id="filterandsort-preferences-content" class="mt-1 hidden rounded-md border border-gray-200 bg-gray-50 p-4">
-                @await Html.PartialAsync("_NotificationPreferences", Model)
+                <div class="flex items-center justify-center">
+                    ----- Unavailable -----
+                </div>
             </div>
         </div>
     </form>
