--- a/WebApp/Views/UserProfile/_ProfileSection.cshtml
+++ b/WebApp/Views/UserProfile/_ProfileSection.cshtml
@@ -18,7 +18,7 @@
                     onclick="submitChanges()">
                 Save Changes
             </button>
-            <button type="button" onclick="enableEditMode()" id="editButton"
+            <button type="button" onclick="featureUnavailable()" id="editButton"
                     class="flex items-center rounded-md bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]">
                 @Html.Raw(Resources.Constants.SvgIcons.UpdateIcon) Update
             </button>
