--- a/WebApp/Views/Application/Index.cshtml
+++ b/WebApp/Views/Application/Index.cshtml
@@ -67,15 +67,7 @@
     <!-- Table -->
     <div class="h-[75vh] overflow-auto rounded-lg bg-[#F5F7F8]">
         <div class="flex w-full justify-end bg-white py-2">
-            <button onclick="location.href='@Url.Action("", "",
-                        new {
-                            SortBy = sortBy,
-                            Search = search,
-                            PageIndex = pageIndex,
-                            ProgramFilter = filterByProgram,
-                            WorkSetupFilter = filterByWorkSetup,
-                            StatusFilter = filterByStatus,
-                        })'"
+            <button onclick="featureUnavailable()"
                     class="flex w-full max-w-[200px] cursor-pointer items-center justify-end text-right text-[#343131] hover:text-[#A04747] focus:outline-none">
                 @Html.Raw(ArchiveIcon) Archived Applications
             </button>
