--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -37,6 +37,11 @@
     string sortByDate = sortBy == "created_asc" ? "created_desc" : "created_asc";
 
     string userId = ViewBag.UserId;
+    bool hasFilters = !string.IsNullOrEmpty(search) ||
+        !string.IsNullOrEmpty(filterByDatePosted) ||
+        !string.IsNullOrEmpty(filterBySalary) ||
+        filterByEmploymentType.Any() ||
+        filterByWorkSetup.Any();
 }
 
 <div class="mx-auto min-h-screen min-w-full bg-[#F5F6F8] pt-16 text-gray-900">
@@ -101,7 +106,9 @@
             <div>
                 @if (!Model.Any())
                 {
-                    @(string.IsNullOrEmpty(search) ? Html.Raw("No jobs found") : Html.Raw("No jobs found matching the criteria"))
+                    <div class="items-cent border-y-2 flex justify-center py-4  italic">
+                        @(!hasFilters ? Html.Raw("--- No jobs found ---") : Html.Raw("--- No jobs found matching the criteria ---"))
+                    </div>
                 }
                 else
                 {
@@ -144,7 +151,7 @@
 
                                     <!-- Salary and Job Description -->
                                     <div>
-                                        <span class="text-sm font-bold text-gray-700">@job.Salary </span>
+                                        <span class="text-sm font-bold text-gray-700">@(job.Salary == "Php 0 - Php 0" ? "Unpaid" : job.Salary)</span>
                                     </div>
                                     <p class="pt-2 text-sm text-gray-600">@job.Description</p>
 
