--- a/WebApp/Views/UserProfile/ViewProfile.cshtml
+++ b/WebApp/Views/UserProfile/ViewProfile.cshtml
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="flex justify-center">
-                    <button class="text-red-500 hover:text-red-700">Delete Account</button>
+                    <button class="text-red-500 hover:text-red-700" onclick="featureUnavailable()">Delete Account</button>
                 </div>
             </div>
 
@@ -116,14 +116,16 @@
         });
 
         document.getElementById('clear-profile-btn').addEventListener('click', function () {
-            document.getElementById('profile-picture-preview').setAttribute('src', 'https://via.placeholder.com/150');
+            document.getElementById('profile-picture-preview').setAttribute('src', 'https://ui-avatars.com/api/?name=@userName+@userLastName&background=A04747&color=fff&format=svg');
             document.getElementById('save-clear-buttons').classList.add('hidden');
             document.getElementById('profile-picture').value = '';
         });
 
         document.getElementById('save-profile-btn').addEventListener('click', function () {
-            alert('Profile picture saved successfully!');
+            toastr.error("Feature unavailable.");
+            document.getElementById('profile-picture-preview').setAttribute('src', 'https://ui-avatars.com/api/?name=@userName+@userLastName&background=A04747&color=fff&format=svg');
             document.getElementById('save-clear-buttons').classList.add('hidden');
+            document.getElementById('profile-picture').value = '';
         });
     </script>
     <script>
